# bmi203-project5

./: .gitignore  README.md  main.py  pyproject.toml
cluster/: __init__.py  kmeans.py  silhouette.py
test/: test_kmeans.py  test_silhouette.py
