[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "cluster"
authors = [{name = "Umair Khan", email = "umair.khan@ucsf.edu"}]
readme = "README.md"
license = {file = "LICENSE"}
classifiers = ["License :: OSI Approved :: MIT License"]
dynamic = ["version", "description"]
dependencies = ["numpy >= 1.21", "pytest >= 6.2", "scipy >= 1.7", "scikit-learn >= 1.0"]
